# Medical_MCP_Server

./: .env.example  .gitignore  FDA_LABEL_README.md  PROJECT_MAP.md  README.md  clean_fda_display.py  diagnostic_test.py  direct_fda_test.py  fda_label_by_name.py  fda_label_detailed.py  fda_label_test.py  pyproject.toml  render.yaml  render_start.sh  requirements.txt  test_api_client_caching.py  test_fda_label.py  test_fda_search.py  test_ndc_fix.py  test_package_ndc.py  test_pharmacy_modules.py
ai_documentation/: AI_CHANGELOG.md  AI_CHANGELOG_NEW.md
app/: main.py
app/cache/: fda_b428b051092634d5f4793d57411eecbc.json  rxnav_76d15d5a1d36ed4e71a576a59dfaae29.json
app/docs/: pharmacy_apis.md
app/models/: fda_resources.py
app/prompt_templates/: __init__.py  pharmacy.py
app/resources/: fda_drug_resources.py
app/routes/: mcp_handler.py
app/routes/fda/: __init__.py  dailymed_routes.py  label_info_routes.py  label_routes.py  ndc_routes.py  orange_book_routes.py  therapeutic_routes.py
app/routes/pharmacy/: __init__.py  bulk_ndc_routes.py  ndc_lookup_routes.py
app/routes/tools/: __init__.py  fda.py  pubmed.py  trials.py
app/static/.well-known/: ai-plugin.json
app/utils/: api_cache.py  api_clients.py  dailymed_client.py  formatters.py
app/utils/dailymed/: __init__.py  fetch.py  (+5 more)
schemas/: chatgpt_action_schema_final.json  compact_prompt.txt  system_pormpt.txt
scripts/: session_bootstrap.py
tests/: README.md  conftest.py  pytest.ini  test_dailymed_fallback.py  test_fda_orange_book.py  test_integration.py  test_mcp_tools.py  test_parsing.py  test_search.py
(+15 files in other folders)
